# monorepo

./: .gitignore  Cargo.toml  clippy.toml  degit.json  migrate-rust.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yaml
.husky/: pre-push
.moon/: workspace.yml
apps/astro-web/: package.json
apps/fastapi-ai/: Cargo.toml  Dockerfile  moon.yml
apps/fastapi-ai/migrations/: 20250714000000_create_users_table.sql
apps/fastapi-ai/src/: main.rs
apps/fastapi-ai/src/core/: database.rs  env.rs
apps/fastapi-ai/src/model/: user.rs
apps/fastapi-ai/tests/: golden.rs
apps/go-clean/: Cargo.toml  Dockerfile  moon.yml
apps/go-clean/src/: main.rs
apps/go-clean/tests/: golden.rs
apps/go-modular/: Cargo.toml  Dockerfile  moon.yml
apps/go-modular/benches/: session_middleware.rs
apps/go-modular/src/: lib.rs  main.rs
apps/go-modular/src/apputils/: mod.rs
apps/go-modular/src/cli/: mod.rs
apps/go-modular/src/domain/: error.rs  mod.rs  response.rs
apps/go-modular/src/mailer/: mod.rs
apps/go-modular/src/modules/auth/: handler.rs  mod.rs  models.rs  schema.rs  service.rs
apps/go-modular/src/modules/user/: handler.rs  mod.rs  models.rs
apps/go-modular/src/server/: handler.rs  router.rs
apps/go-modular/tests/: integration_auth.rs  integration_mailer.rs  smoke_boot.rs
apps/go-modular/tests/common/: mod.rs
apps/react-app/: package.json
apps/react-ssr/: package.json
apps/rust-ai/src/: lib.rs
apps/rust-clean/tests/: golden.rs
apps/strapi-cms/: package.json
apps/strapi-cms/src/admin/: tsconfig.json
apps/tanstack-start/src/routes/(auth)/: login.tsx
apps/templates-cli/: Cargo.toml
apps/templates-cli/src/: common.rs
apps/templates-cli/src/builders/: mod.rs
apps/templates-cli/src/commands/: build.rs  makezip.rs
docsite/content/: create-new-project.md
templates/expo/: package.json
templates/go-clean/: moon.yml
templates/go-modular/: moon.yml
templates/nextjs/: tsconfig.json
templates/react-app/: package.json  tsconfig.json
templates/react-ssr/: package.json  tsconfig.json
templates/rust-ai/: Cargo.toml  README.md
templates/rust-ai/src/: lib.rs  main.rs
templates/rust-ai/src/model/: user.rs
templates/rust-clean/: .env.example  Cargo.toml
templates/rust-clean/src/: main.rs
templates/rust-clean/src/config/: env.rs
templates/rust-modular/: .env.example  Cargo.toml
templates/rust-modular/src/: main.rs
templates/rust-modular/src/cli/: mod.rs
templates/rust-modular/src/config/: defaults.rs
templates/rust-modular/src/mailer/: mod.rs
templates/rust-modular/tests/: smoke_boot.rs
templates/shared-ui/: package.json  tsconfig.json
templates/shared-ui/src/components/calendar/: calendar.stories.raw.tsx
templates/shared-ui/src/components/card/: card.stories.raw.tsx
templates/strapi/: package.json
