[workspace]
resolver = "2"
members = [
    "apps/templates-cli",
]

# Placeholder members for later phases (commented out until each phase
# creates its crate). Uncomment as Phase B / C / D land.
# Phase B: "apps/fastapi-ai",
# Phase C: "apps/go-clean",
# Phase D: "apps/go-modular",

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/zero-one-group/monorepo"
publish = false

# Workspace-level dependency pins. Every version below was verified against
# https://docs.rs/<crate>/latest/. NEVER add a new crate here without
# first verifying the version on docs.rs.
[workspace.dependencies]
anyhow      = "1.0.102"
thiserror   = "2.0.18"
clap        = { version = "4.6.0", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0.149"
walkdir     = "2.5.0"
fs-err      = "3.3.0"
tempfile    = "3.27.0"
zip         = { version = "8.5.1", default-features = false, features = ["deflate"] }
sha2        = "0.11.0"
hex         = "0.4"
regex       = "1.12.3"
glob        = "0.3.3"
chrono      = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
indexmap    = { version = "2", features = ["serde"] }
tracing     = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Test-only
insta       = "1.47.2"
rstest      = "0.23"
pretty_assertions = "1.4"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

[profile.dev]
opt-level = 0

# Clippy lints enforced workspace-wide
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Relaxations — pragmatic for a templating CLI
module_name_repetitions = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
must_use_candidate       = "allow"
too_many_lines           = "allow"
